; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/crypto/extr_cryptokeytest.c_bignum_to_le.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/crypto/extr_cryptokeytest.c_bignum_to_le.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @bignum_to_le to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @bignum_to_le(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @BN_num_bytes(i32* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %32

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = call i8* @malloc(i32 %13)
  store i8* %14, i8** %6, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i8* null, i8** %2, align 8
  br label %32

18:                                               ; preds = %12
  %19 = load i32*, i32** %3, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @BN_bn2lebinpad(i32* %19, i8* %20, i32 %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %18
  %26 = load i32, i32* @stderr, align 4
  %27 = call i32 @ERR_print_errors_fp(i32 %26)
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @free(i8* %28)
  store i8* null, i8** %2, align 8
  br label %32

30:                                               ; preds = %18
  %31 = load i8*, i8** %6, align 8
  store i8* %31, i8** %2, align 8
  br label %32

32:                                               ; preds = %30, %25, %17, %11
  %33 = load i8*, i8** %2, align 8
  ret i8* %33
}

declare dso_local i32 @BN_num_bytes(i32*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @BN_bn2lebinpad(i32*, i8*, i32) #1

declare dso_local i32 @ERR_print_errors_fp(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
